# cropbox

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dist.json  pyproject.toml
.github/workflows/: ci.yml
src/cropbox/: __init__.py  __main__.py  app.py  logging_utils.py
src/cropbox/media/: __init__.py  commands.py  dependencies.py  exporter.py  headless.py  probe.py  thumbnails.py
src/cropbox/models/: __init__.py  crop_rect.py  edit_session.py  media_info.py  transform.py  trim_range.py
src/cropbox/widgets/: __init__.py  crop_overlay.py  export_dialog.py  info_panel.py  main_window.py  player_widget.py  resize_dialog.py  timeline.py
tests/: test_cli.py  test_commands.py  test_crop_overlay.py  test_export_dialog.py  test_headless.py  test_player_widget.py  test_probe.py  test_resize_dialog.py  test_timeline.py  test_transform.py
