[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cropbox"
version = "0.1.0"
description = "Lightweight media crop and trim tool."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.5",
]

[project.scripts]
cropbox = "cropbox.__main__:main"