# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cropbox"
version = "0.1.6"
description = "Lightweight media crop and trim tool."
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
dependencies = [
    "PySide6>=6.5",
]

[project.urls]
Repository = "https://github.com/rsgalloway/cropbox"

[project.scripts]
cropbox = "cropbox.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cropbox"]
exclude = [
    "/src/cropbox/**/__pycache__",
    "/src/cropbox/**/*.pyc",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
ignore_missing_imports = true
